--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 ﻿body {
 	font-family: Arial, sans-serif;
 	background-image: url(images/blob-blur.png);
-	color: #EEE;
 }
 #wrapper{
 	width: 940px;
 	margin: 0px auto;
 }
 .box{
-	padding: 20px;
+	padding-top:10px;
+	padding-bottom:10px;
 	background-color: #EEE;
 	border-radius:2px;
 }
@@ -25,8 +25,31 @@ a.button {
 a.button:hover{
 	background-color: #00CB00;
 }
+.nav{
+
+}
+.nav ul{
+	list-style-type: none;
+	margin:0px;
+	padding: 5px 0px;
+	background-image: linear-gradient(to bottom, #BBB, #AAA);
+}
+.nav li {
+	display: inline;
+}
+.nav a{
+	border-radius:6px;
+	padding:5px;
+	background-color: #00D500;
+	color: white;
+	text-decoration: none;
+}
+.nav a:hover{
+	background-color: #00CB00;
+}
 .youtube {
 display:block;
+text-align:center;
 margin-top: 10px;
 margin-bottom: 10px;
 }
@@ -34,13 +57,15 @@ margin-bottom: 10px;
 .dl-btns{
 	list-style-type: none;
 	padding: 0;
+	padding-left: 69.5px;
+	padding-right: 69.5px;
 }
 .dl-btns li {
 	display: inline;
 	width:128px;
 	height:128px;
-	margin-left: 80.75px;
-	margin-right: 80.75px;
+	margin-left: 63px;
+	margin-right: 63px;
 }
 .dl-btns a {
 	text-decoration: none;
@@ -48,9 +73,9 @@ margin-bottom: 10px;
 .dl-btns img{
 	border-radius:6px;
 	padding:5px;
-	background-color: #E0E0E0;
+	background-color: #EEE;
 }
 
 .dl-btns img:hover{
-	background-color: #EEE;
+	background-color: #E0E0E0;
 }
