initial sizing of image links

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@
 	width: 250px;
 	margin: 0px 30px;
 }
+.gallery a {
+	width: 250px;
+	height: 125px;
+	overflow: hidden;
+}
 
 p{
 	margin-top: 0px;
