--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
-﻿body {
+﻿html {
+       overflow-y: scroll;
+}
+body {
 	font-family: Arial, sans-serif;
 	background: url(../images/bg-blob.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	margin:0;
 	margin-top:10px;
 }
 #wrapper{
