Blog Template and top margin

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,12 @@
 }
 body {
 	font-family: Arial, sans-serif;
-	background: url(../images/bg-blob.png) no-repeat center center fixed;
+	background: url(../images/bg-blob.png) no-repeat fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 	margin:0;
-	margin-top:10px;
 }
 #wrapper{
 	width: 940px;
