updated BG image

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
 	font-family: Arial, sans-serif;
-	background: url(../images/bg-blob.png) no-repeat fixed;
+	background: url(../images/blobbg.jpg) no-repeat fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
