--- a/Download/dl.css
+++ b/Download/dl.css
@@ -8,4 +8,11 @@
 	position:absolute;
 	width:138px;
 	text-align:center;
+	margin-top:-15px;
+}
+.box{
+	padding:20px;
+}
+h3{
+	margin-bottom:5px;
 }
