--- a/Download/dl.css
+++ b/Download/dl.css
@@ -16,10 +16,10 @@ background-color: #00AB00;
 	margin: 30px 0;
 	text-align:center;
 }
-.caption{
-	position:absolute;
+.hash{
+	/*position:absolute;
 	margin-top:-15px;
-	margin-left:-25px;
+	margin-left:-25px;*/
 	font-size:8pt;
 	display:inline-block;
 }
